popover menu component

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="overflow-y-scroll accent-primary bg-neutral-175 min-h-screen font-light underline-offset-4 decoration-1">
+<html lang="en" class="overflow-y-scroll accent-primary bg-neutral-175 text-neutral-900 min-h-screen font-light underline-offset-4 decoration-1">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
